fixed thank you

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           </div>
         </div>
         <!-- Pre Requisites -->
-        <div class="pre-requisite-div">
+        <!-- <div class="pre-requisite-div">
           <div>
             <h4>Prerequisites to join this workshop</h4>
             <ol type="1">
@@ -340,8 +340,8 @@
               <li>You should be practicing asanas at least 4 times a week</li>
             </ol>
           </div>
-        </div>
-        <hr class="divider" />
+        </div> -->
+        <!-- <hr class="divider" /> -->
         <!-- what's included -->
         <div class="include-div mt-40">
           <div>
