fixed divider line

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </p>
           </div>
         </div>
-        <hr class="hr-hero" style="margin: 16px 0px" />
+        <div class="hr-hero divider" style="margin: 16px 0px"></div>
         <div class="session-counter-hero">
           <h3>Challenge starting in</h3>
           <div class="session-counter-inner m-0">
@@ -341,7 +341,7 @@
             </ol>
           </div>
         </div> -->
-        <!-- <hr class="divider" /> -->
+        <!-- <div class="divider mt-40"></div> -->
         <!-- what's included -->
         <div class="include-div mt-40">
           <div>
@@ -431,7 +431,7 @@
             </div>
           </div>
         </div>
-        <hr class="divider mt-40" />
+        <div class="divider mt-40"></div>
         <div id="benefits" class="benefits mt-40 mb-40">
           <div class="text-center">
             <h2 class="whats-include-heading mb-0">Benefits You Will Gain</h2>
@@ -500,7 +500,7 @@
             </div>
           </div>
         </div>
-        <hr class="divider mt-40" />
+        <div class="divider mt-40"></div>
         <div class="mt-40">
           <div>
             <h2 class="whats-include-heading">
@@ -599,7 +599,7 @@
                 src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/home/arrow.svg" /></a>
           </div>
         </div>
-        <hr class="divider mt-40" />
+        <div class="divider mt-40"></div>
         <div class="mt-40">
           <picture class="dishes-recipes">
             <!-- Mobile image -->
@@ -617,7 +617,7 @@
           </picture>
           <!-- <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/few-dishes-we-will-make.webp"> -->
         </div>
-        <hr class="divider mt-40" />
+        <div class="divider mt-40"></div>
         <div class="mt-40">
           <h2 class="whats-include-heading">Curriculum For The 21 Days</h2>
           <div class="taTabs">
@@ -1062,7 +1062,7 @@
             </div>
           </div>
         </div>
-        <hr class="divider mt-40" />
+        <div class="divider mt-40"></div>
         <div class="testimonial-heading-mobile mt-40">
           <h2 class="whats-say-heading">What People Are Saying?</h2>
           <p class="whats-say-subheading">
@@ -1146,7 +1146,8 @@
                     </p>
                   </div>
                 </div>
-                <hr style="background-color: red;" class="mt-30" />
+                <div class="divider mt-30"></div>
+             
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1176,7 +1177,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1207,7 +1208,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1237,7 +1238,7 @@
                     </p>
                   </div>
                 </div>
-                <!-- <hr class="mt-30 divider" /> -->
+                <!--<div class="divider mt-30"></div> -->
                 <div class="testimonials-other">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1267,7 +1268,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1300,7 +1301,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1330,7 +1331,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1363,7 +1364,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1393,7 +1394,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1424,7 +1425,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1454,7 +1455,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+               <div class="divider mt-30"></div>
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1849,7 +1850,7 @@
             </div>
           </div>
         </div>
-        <!-- <hr class="divider mt-40" /> -->
+        <!-- <div class="divider mt-40"></div> -->
         <!-- Scholorship Card Section -->
         <div class="scholarship-card mt-40">
           <div class="scholarship-card-content">
@@ -1869,7 +1870,7 @@
           </div>
         </div>
 
-        <!-- <hr class="divider mt-40" /> -->
+        <!-- <div class="divider mt-40"></div> -->
         <div class="mt-40">
           <div class="who-is-for">
             <div>
@@ -2032,7 +2033,7 @@
             </div>
           </div>
         </div>
-        <hr class="divider mt-40" />
+        <div class="divider mt-40"></div>
         <div class="workshop-for-not-all mt-40">
           <div>
             <h4 class="workshop-not-for">
@@ -2137,7 +2138,7 @@
             </div>
           </div>
         </div>
-        <hr class="divider mt-40" />
+        <div class="divider mt-40"></div>
         <div class="mt-40 subah-image-div">
           <img class="subah-and-harsh"
             src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/subah-and-harsh.jpg"
@@ -2247,7 +2248,7 @@
               <button class="load-more">Load More</button>
             </div>
           </div>
-          <hr class="divider mt-40" />
+          <div class="divider mt-40"></div>
           <div id="hosts" class="mt-40">
             <h4 class="about-the-host">About The Hosts</h4>
             <div class="wrapper about-host-div gap-20">
