--- a/index.html
+++ b/index.html
@@ -108,30 +108,33 @@
 
       </div>
       <div class="video-section">
-        <video id="video"
+        <iframe id="hero-video"   src="https://www.youtube.com/embed/1zqFp1bY4p8?autoplay=1&mute=1&si=RuwYpJZGfBeBSord"  frameborder="0"
+          allow="autoplay; encrypted-media" allowfullscreen
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 12px;">
+        </iframe>
+        <!-- <video id="video"
           poster="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/hero-video-thumbnail.webp"
           loop playsinline style="width: 100%; object-fit: cover; z-index: 0; border-radius: 12px;">
           <source
             src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/videos/join-the-ultimate-health-challenge-starting-3rd-march-multiple-time-slots-online-workshop.mp4"
             type="video/mp4" />
           Your browser does not support the video tag.
-        </video>
+        </video> -->
 
         <!-- Single Play/Pause Button -->
-        <button style="
+        <!-- <button style="
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
       " id="toggleButton" class="video-button">
-          <!-- Initial SVG as Play Button -->
           <svg id="playIcon" xmlns="http://www.w3.org/2000/svg" width="87" height="87" viewBox="0 0 87 87" fill="none">
             <ellipse cx="43.0581" cy="43.0881" rx="43.0581" ry="43.0881" fill="#EC4646" fill-opacity="0.3" />
             <path
               d="M58.6602 45.6852C60.6591 44.5303 60.6591 41.6448 58.6602 40.4899L37.5163 28.274C35.5163 27.1185 33.0156 28.5619 33.0156 30.8717V55.3034C33.0156 57.6132 35.5163 59.0566 37.5163 57.901L58.6602 45.6852Z"
               fill="#EC4646" />
           </svg>
-        </button>
+        </button> -->
       </div>
     </main>
   </section>
